Evaluation/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> scenario
Rule 1     scenario -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> action
Rule 5     statement -> all_action
Rule 6     statement -> assignment
Rule 7     statement -> if_statement
Rule 8     statement -> wait_statement
Rule 9     statement -> compound_statement
Rule 10    compound_statement -> LBRACE statement_list RBRACE
Rule 11    assignment -> IDENTIFIER ASSIGN expression
Rule 12    assignment -> IDENTIFIER DECLARE expression
Rule 13    expression -> IDENTIFIER
Rule 14    expression -> INTEGER
Rule 15    expression -> DOUBLE
Rule 16    expression -> STRING_LITERAL
Rule 17    expression -> tag_expression DOT IDENTIFIER
Rule 18    expression -> tag_expression DOT IDENTIFIER LPAREN input RPAREN
Rule 19    expression -> tag_expression DOT IDENTIFIER LPAREN RPAREN
Rule 20    expression -> ANY LPAREN tag_list RPAREN DOT IDENTIFIER
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression TIMES expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 26    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
Rule 27    tag_expression -> LPAREN tag_list RPAREN
Rule 28    tag_list -> HASH IDENTIFIER
Rule 29    tag_list -> HASH IDENTIFIER tag_list
Rule 30    input -> expression
Rule 31    input -> input COMMA expression
Rule 32    if_statement -> IF LPAREN condition_list RPAREN compound_statement else_clause
Rule 33    else_clause -> ELSE statement
Rule 34    else_clause -> empty
Rule 35    statement -> DELAY LPAREN expression RPAREN
Rule 36    condition_list -> condition
Rule 37    condition_list -> LPAREN condition_list RPAREN
Rule 38    condition_list -> condition_list AND condition_list
Rule 39    condition_list -> condition_list OR condition_list
Rule 40    condition_list -> NOT condition
Rule 41    condition -> expression GE expression
Rule 42    condition -> expression LE expression
Rule 43    condition -> expression EQ expression
Rule 44    condition -> expression NE expression
Rule 45    condition -> expression GT expression
Rule 46    condition -> expression LT expression
Rule 47    wait_statement -> WAIT_UNTIL LPAREN condition_list RPAREN
Rule 48    wait_statement -> WAIT_UNTIL LPAREN period_time RPAREN
Rule 49    period_time -> INTEGER time_unit
Rule 50    time_unit -> MILLISECOND
Rule 51    time_unit -> SECOND
Rule 52    time_unit -> MINUTE
Rule 53    time_unit -> HOUR
Rule 54    time_unit -> DAY
Rule 55    empty -> <empty>
Rule 56    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 57    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN

Terminals, with rules where they appear

ALL                  : 56 57
AND                  : 38
ANY                  : 20
ASSIGN               : 11
COMMA                : 31
DAY                  : 54
DECLARE              : 12
DELAY                : 35
DIVIDE               : 24
DOT                  : 17 18 19 20 25 26 56 57
DOUBLE               : 15
ELSE                 : 33
EQ                   : 43
GE                   : 41
GT                   : 45
HASH                 : 28 29
HOUR                 : 53
IDENTIFIER           : 11 12 13 17 18 19 20 25 26 28 29 56 57
IF                   : 32
INTEGER              : 14 49
LBRACE               : 10
LE                   : 42
LPAREN               : 18 19 20 25 25 26 26 27 32 35 37 47 48 56 56 57 57
LT                   : 46
MILLISECOND          : 50
MINUS                : 22
MINUTE               : 52
NE                   : 44
NOT                  : 40
OR                   : 39
PLUS                 : 21
RBRACE               : 10
RPAREN               : 18 19 20 25 25 26 26 27 32 35 37 47 48 56 56 57 57
SECOND               : 51
STRING_LITERAL       : 16
TIMES                : 23
WAIT_UNTIL           : 47 48
error                : 

Nonterminals, with rules where they appear

action               : 4
all_action           : 5
assignment           : 6
compound_statement   : 9 32
condition            : 36 40
condition_list       : 32 37 38 38 39 39 47
else_clause          : 32
empty                : 34
expression           : 11 12 21 21 22 22 23 23 24 24 30 31 35 41 41 42 42 43 43 44 44 45 45 46 46
if_statement         : 7
input                : 18 26 31 57
period_time          : 48
scenario             : 0
statement            : 2 3 33
statement_list       : 1 3 10
tag_expression       : 17 18 19
tag_list             : 20 25 26 27 29 56 57
time_unit            : 49
wait_statement       : 8

Parsing method: LALR

state 0

    (0) S' -> . scenario
    (1) scenario -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (35) statement -> . DELAY LPAREN expression RPAREN
    (25) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (26) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (56) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (57) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) assignment -> . IDENTIFIER DECLARE expression
    (32) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (47) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (48) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (10) compound_statement -> . LBRACE statement_list RBRACE

    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    scenario                       shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 1

    (0) S' -> scenario .



state 2

    (1) scenario -> statement_list .

    $end            reduce using rule 1 (scenario -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (35) statement -> . DELAY LPAREN expression RPAREN
    (25) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (26) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (56) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (57) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) assignment -> . IDENTIFIER DECLARE expression
    (32) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (47) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (48) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (10) compound_statement -> . LBRACE statement_list RBRACE

    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)
    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    statement                      shift and go to state 3
    statement_list                 shift and go to state 17
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 4

    (4) statement -> action .

    DELAY           reduce using rule 4 (statement -> action .)
    LPAREN          reduce using rule 4 (statement -> action .)
    ALL             reduce using rule 4 (statement -> action .)
    IDENTIFIER      reduce using rule 4 (statement -> action .)
    IF              reduce using rule 4 (statement -> action .)
    WAIT_UNTIL      reduce using rule 4 (statement -> action .)
    LBRACE          reduce using rule 4 (statement -> action .)
    $end            reduce using rule 4 (statement -> action .)
    RBRACE          reduce using rule 4 (statement -> action .)


state 5

    (5) statement -> all_action .

    DELAY           reduce using rule 5 (statement -> all_action .)
    LPAREN          reduce using rule 5 (statement -> all_action .)
    ALL             reduce using rule 5 (statement -> all_action .)
    IDENTIFIER      reduce using rule 5 (statement -> all_action .)
    IF              reduce using rule 5 (statement -> all_action .)
    WAIT_UNTIL      reduce using rule 5 (statement -> all_action .)
    LBRACE          reduce using rule 5 (statement -> all_action .)
    $end            reduce using rule 5 (statement -> all_action .)
    RBRACE          reduce using rule 5 (statement -> all_action .)


state 6

    (6) statement -> assignment .

    DELAY           reduce using rule 6 (statement -> assignment .)
    LPAREN          reduce using rule 6 (statement -> assignment .)
    ALL             reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    WAIT_UNTIL      reduce using rule 6 (statement -> assignment .)
    LBRACE          reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    RBRACE          reduce using rule 6 (statement -> assignment .)


state 7

    (7) statement -> if_statement .

    DELAY           reduce using rule 7 (statement -> if_statement .)
    LPAREN          reduce using rule 7 (statement -> if_statement .)
    ALL             reduce using rule 7 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WAIT_UNTIL      reduce using rule 7 (statement -> if_statement .)
    LBRACE          reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> wait_statement .

    DELAY           reduce using rule 8 (statement -> wait_statement .)
    LPAREN          reduce using rule 8 (statement -> wait_statement .)
    ALL             reduce using rule 8 (statement -> wait_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> wait_statement .)
    IF              reduce using rule 8 (statement -> wait_statement .)
    WAIT_UNTIL      reduce using rule 8 (statement -> wait_statement .)
    LBRACE          reduce using rule 8 (statement -> wait_statement .)
    $end            reduce using rule 8 (statement -> wait_statement .)
    RBRACE          reduce using rule 8 (statement -> wait_statement .)


state 9

    (9) statement -> compound_statement .

    DELAY           reduce using rule 9 (statement -> compound_statement .)
    LPAREN          reduce using rule 9 (statement -> compound_statement .)
    ALL             reduce using rule 9 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> compound_statement .)
    IF              reduce using rule 9 (statement -> compound_statement .)
    WAIT_UNTIL      reduce using rule 9 (statement -> compound_statement .)
    LBRACE          reduce using rule 9 (statement -> compound_statement .)
    $end            reduce using rule 9 (statement -> compound_statement .)
    RBRACE          reduce using rule 9 (statement -> compound_statement .)


state 10

    (35) statement -> DELAY . LPAREN expression RPAREN

    LPAREN          shift and go to state 18


state 11

    (25) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (26) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) tag_list -> . HASH IDENTIFIER
    (29) tag_list -> . HASH IDENTIFIER tag_list

    HASH            shift and go to state 20

    tag_list                       shift and go to state 19

state 12

    (11) assignment -> IDENTIFIER . ASSIGN expression
    (12) assignment -> IDENTIFIER . DECLARE expression

    ASSIGN          shift and go to state 21
    DECLARE         shift and go to state 22


state 13

    (56) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (57) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN

    LPAREN          shift and go to state 23


state 14

    (32) if_statement -> IF . LPAREN condition_list RPAREN compound_statement else_clause

    LPAREN          shift and go to state 24


state 15

    (47) wait_statement -> WAIT_UNTIL . LPAREN condition_list RPAREN
    (48) wait_statement -> WAIT_UNTIL . LPAREN period_time RPAREN

    LPAREN          shift and go to state 25


state 16

    (10) compound_statement -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (35) statement -> . DELAY LPAREN expression RPAREN
    (25) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (26) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (56) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (57) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (11) assignment -> . IDENTIFIER ASSIGN expression
    (12) assignment -> . IDENTIFIER DECLARE expression
    (32) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (47) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (48) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (10) compound_statement -> . LBRACE statement_list RBRACE

    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    statement_list                 shift and go to state 26
    statement                      shift and go to state 3
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 17

    (3) statement_list -> statement statement_list .

    $end            reduce using rule 3 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 3 (statement_list -> statement statement_list .)


state 18

    (35) statement -> DELAY LPAREN . expression RPAREN
    (13) expression -> . IDENTIFIER
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . STRING_LITERAL
    (17) expression -> . tag_expression DOT IDENTIFIER
    (18) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (19) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . ANY LPAREN tag_list RPAREN DOT IDENTIFIER
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (27) tag_expression -> . LPAREN tag_list RPAREN

    IDENTIFIER      shift and go to state 29
    INTEGER         shift and go to state 30
    DOUBLE          shift and go to state 31
    STRING_LITERAL  shift and go to state 32
    ANY             shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 28
    tag_expression                 shift and go to state 33

state 19

    (25) action -> LPAREN tag_list . RPAREN DOT IDENTIFIER LPAREN RPAREN
    (26) action -> LPAREN tag_list . RPAREN DOT IDENTIFIER LPAREN input RPAREN

    RPAREN          shift and go to state 35


state 20

    (28) tag_list -> HASH . IDENTIFIER
    (29) tag_list -> HASH . IDENTIFIER tag_list

    IDENTIFIER      shift and go to state 36


state 21

    (11) assignment -> IDENTIFIER ASSIGN . expression
    (13) expression -> . IDENTIFIER
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . STRING_LITERAL
    (17) expression -> . tag_expression DOT IDENTIFIER
    (18) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (19) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . ANY LPAREN tag_list RPAREN DOT IDENTIFIER
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (27) tag_expression -> . LPAREN tag_list RPAREN

    IDENTIFIER      shift and go to state 29
    INTEGER         shift and go to state 30
    DOUBLE          shift and go to state 31
    STRING_LITERAL  shift and go to state 32
    ANY             shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 37
    tag_expression                 shift and go to state 33

state 22

    (12) assignment -> IDENTIFIER DECLARE . expression
    (13) expression -> . IDENTIFIER
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . STRING_LITERAL
    (17) expression -> . tag_expression DOT IDENTIFIER
    (18) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (19) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . ANY LPAREN tag_list RPAREN DOT IDENTIFIER
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (27) tag_expression -> . LPAREN tag_list RPAREN

    IDENTIFIER      shift and go to state 29
    INTEGER         shift and go to state 30
    DOUBLE          shift and go to state 31
    STRING_LITERAL  shift and go to state 32
    ANY             shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 38
    tag_expression                 shift and go to state 33

state 23

    (56) all_action -> ALL LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (57) all_action -> ALL LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) tag_list -> . HASH IDENTIFIER
    (29) tag_list -> . HASH IDENTIFIER tag_list

    HASH            shift and go to state 20

    tag_list                       shift and go to state 39

state 24

    (32) if_statement -> IF LPAREN . condition_list RPAREN compound_statement else_clause
    (36) condition_list -> . condition
    (37) condition_list -> . LPAREN condition_list RPAREN
    (38) condition_list -> . condition_list AND condition_list
    (39) condition_list -> . condition_list OR condition_list
    (40) condition_list -> . NOT condition
    (41) condition -> . expression GE expression
    (42) condition -> . expression LE expression
    (43) condition -> . expression EQ expression
    (44) condition -> . expression NE expression
    (45) condition -> . expression GT expression
    (46) condition -> . expression LT expression
    (13) expression -> . IDENTIFIER
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . STRING_LITERAL
    (17) expression -> . tag_expression DOT IDENTIFIER
    (18) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (19) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . ANY LPAREN tag_list RPAREN DOT IDENTIFIER
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (27) tag_expression -> . LPAREN tag_list RPAREN

    LPAREN          shift and go to state 40
    NOT             shift and go to state 43
    IDENTIFIER      shift and go to state 29
    INTEGER         shift and go to state 30
    DOUBLE          shift and go to state 31
    STRING_LITERAL  shift and go to state 32
    ANY             shift and go to state 34

    condition_list                 shift and go to state 41
    condition                      shift and go to state 42
    expression                     shift and go to state 44
    tag_expression                 shift and go to state 33

state 25

    (47) wait_statement -> WAIT_UNTIL LPAREN . condition_list RPAREN
    (48) wait_statement -> WAIT_UNTIL LPAREN . period_time RPAREN
    (36) condition_list -> . condition
    (37) condition_list -> . LPAREN condition_list RPAREN
    (38) condition_list -> . condition_list AND condition_list
    (39) condition_list -> . condition_list OR condition_list
    (40) condition_list -> . NOT condition
    (49) period_time -> . INTEGER time_unit
    (41) condition -> . expression GE expression
    (42) condition -> . expression LE expression
    (43) condition -> . expression EQ expression
    (44) condition -> . expression NE expression
    (45) condition -> . expression GT expression
    (46) condition -> . expression LT expression
    (13) expression -> . IDENTIFIER
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . STRING_LITERAL
    (17) expression -> . tag_expression DOT IDENTIFIER
    (18) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (19) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . ANY LPAREN tag_list RPAREN DOT IDENTIFIER
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (27) tag_expression -> . LPAREN tag_list RPAREN

    LPAREN          shift and go to state 40
    NOT             shift and go to state 43
    INTEGER         shift and go to state 47
    IDENTIFIER      shift and go to state 29
    DOUBLE          shift and go to state 31
    STRING_LITERAL  shift and go to state 32
    ANY             shift and go to state 34

    condition_list                 shift and go to state 45
    period_time                    shift and go to state 46
    condition                      shift and go to state 42
    expression                     shift and go to state 44
    tag_expression                 shift and go to state 33

state 26

    (10) compound_statement -> LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 48


state 27

    (27) tag_expression -> LPAREN . tag_list RPAREN
    (28) tag_list -> . HASH IDENTIFIER
    (29) tag_list -> . HASH IDENTIFIER tag_list

    HASH            shift and go to state 20

    tag_list                       shift and go to state 49

state 28

    (35) statement -> DELAY LPAREN expression . RPAREN
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 50
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    TIMES           shift and go to state 53
    DIVIDE          shift and go to state 54


state 29

    (13) expression -> IDENTIFIER .

    RPAREN          reduce using rule 13 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 13 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 13 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 13 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 13 (expression -> IDENTIFIER .)
    DELAY           reduce using rule 13 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 13 (expression -> IDENTIFIER .)
    ALL             reduce using rule 13 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 13 (expression -> IDENTIFIER .)
    IF              reduce using rule 13 (expression -> IDENTIFIER .)
    WAIT_UNTIL      reduce using rule 13 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 13 (expression -> IDENTIFIER .)
    $end            reduce using rule 13 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 13 (expression -> IDENTIFIER .)
    GE              reduce using rule 13 (expression -> IDENTIFIER .)
    LE              reduce using rule 13 (expression -> IDENTIFIER .)
    EQ              reduce using rule 13 (expression -> IDENTIFIER .)
    NE              reduce using rule 13 (expression -> IDENTIFIER .)
    GT              reduce using rule 13 (expression -> IDENTIFIER .)
    LT              reduce using rule 13 (expression -> IDENTIFIER .)
    AND             reduce using rule 13 (expression -> IDENTIFIER .)
    OR              reduce using rule 13 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 13 (expression -> IDENTIFIER .)


state 30

    (14) expression -> INTEGER .
